# django-mini-example

./: LICENSE  README.md  compose.yaml  justfile  pyproject.toml
app/config/: settings.py
app/demoapp/: models.py
app/demoapp/migrations/: 0001_initial.py
docker/: Containerfile
tests/test_demoapp/: simple_test.py
